Сделал Кастомные формы регистрации Входа/Выхода через django.contrib.auth

--- a/bookmarks/account/templates/registration/login.html
+++ b/bookmarks/account/templates/registration/login.html
@@ -1,21 +1,14 @@
 {% extends "account/base.html" %}
-{% block title %}Вход{% endblock %}
+
+{% block title %} Вход {% endblock %}
+
 {% block content %}
-<h1>Войдите</h1>
-{% if form.errors %}
-<p>
-    Имя пользователя и пароль не совпадают.
-    Пожалуйста, попробуйте еще раз.
-</p>
-{% else %}
-<p>Пожалуйста, используйте следующую форму для входа:</p>
-{% endif %}
-<div class="login-form">
-    <form action="{% url 'authentication' %}" method="post">
-        {{ form.as_p }}
-        {% csrf_token %}
-        <input type="hidden" name="next" value="{{ next }}"/>
-        <p><input type="submit" value="Войти"></p>
-    </form>
-</div>
+
+<form action="{% url 'login' %}" method="post">
+    {{form.as_p}}
+    {% csrf_token %}
+
+    <input type="submit" value="Войти">
+</form>
+
 {% endblock %}
