--- a/bookmarks/account/templates/registration/login.html
+++ b/bookmarks/account/templates/registration/login.html
@@ -6,9 +6,10 @@
 
 <form action="{% url 'login' %}" method="post">
     {{form.as_p}}
+    {{next}}
     {% csrf_token %}
-
-    <input type="submit" value="Войти">
+    <input name = "next" value="{{next}}" />
+    <input type="submit" value="Войти" />
 </form>
 
 {% endblock %}
