--- a/bookmarks/account/templates/account/base.html
+++ b/bookmarks/account/templates/account/base.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %}</title>
+    <link href="{% static 'account/css/main_account.css' %}" rel="stylesheet">
 
     <nav>
         <ul>
@@ -20,7 +22,6 @@
             <li {% if sectiom == 'people' %} class = 'people' {%endif%}%>
                 <a href="#">Люди</a>
             </li>
-
             {% endif %}
         </ul>
     </nav>
