--- a/bookmarks/account/templates/registration/password_change_form.html
+++ b/bookmarks/account/templates/registration/password_change_form.html
@@ -1,11 +1,9 @@
-{% extends "account/base.html" %}
-{% block title %}Change your password{% endblock %}
+{% extends "account/base.html"%}
+{% block title %}Смена пароля{% endblock %}
 {% block content %}
-<h1>Change your password</h1>
-<p>Use the form below to change your password.</p>
 <form method="post">
-    {{ form.as_p }}
-    <p><input type="submit" value="Change"></p>
     {% csrf_token %}
+    {{form.as_p}}
+    <input type="submit" value="Сменить пароль">
 </form>
 {% endblock %}
