Изменил текст письма Устранил некоторые опечатки После ввода логина - пароля ( если нет переменной next ) пользователя будет пененапрвлять на страницу дашборда ( по умл)

--- a/bookmarks/account/templates/registration/login.html
+++ b/bookmarks/account/templates/registration/login.html
@@ -6,10 +6,9 @@
 
 <form action="{% url 'login' %}" method="post">
     {{form.as_p}}
-    {{next}}
     {% csrf_token %}
-    <input name = "next" value="{{next}}" />
-    <input type="submit" value="Войти" />
+    <input  type="hidden" name="next" value="{{next}}"/>
+    <p><input type="submit" value="Войти" /></p>
 </form>
-
+<a href="{% url 'password_reset' %}">Забыли пароль?</a>
 {% endblock %}
