Переписал два includes файла с разными хедерами ( в одном из них основной хедер,который отображает навигацию по всем страницам сайта, другой отображает только логотип и ссылку для входа )

--- a/bookmarks/account/templates/account/dashboard.html
+++ b/bookmarks/account/templates/account/dashboard.html
@@ -1,6 +1,9 @@
 {% extends 'account/base.html' %}
 {% block title %}Dashboard{% endblock %}
 {% block content %}
-    <h1>Дашборд</h1>
-    <p>Добро пожаловать в ваш дашборд</p>
+
+{% include 'account/includes/header_main.html' with section='dashboard' %}
+
+<h1>Дашборд</h1>
+<p>Добро пожаловать в ваш дашборд</p>
 {% endblock %}
