--- a/bookmarks/account/templates/registration/password_reset_complete.html
+++ b/bookmarks/account/templates/registration/password_reset_complete.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Успешно</title>
-</head>
-<body>
+{% extends 'account/base.html' %}
+{% block title %} Успешно {% endblock %}
+{% block content %}
+{% include 'account/includes/header_registration_block.html' %}
 <h1>Вы успешно сменили пароль</h1>
-</body>
-</html>
+
+{% endblock %}
