--- a/bookmarks/account/templates/registration/password_reset_done.html
+++ b/bookmarks/account/templates/registration/password_reset_done.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Успешно</title>
-</head>
-<body>
+{% extends 'account/base.html' %}
+{% block title %} Успешно {% endblock%}
+{% block content%}
 <h1>Сообщения для дальнейшего восстановления пароля отправлено на вашу почту</h1>
-</body>
-</html>
+{% endblock %}
