--- a/bookmarks/account/templates/registration/password_reset_form.html
+++ b/bookmarks/account/templates/registration/password_reset_form.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Восстановление пароля</title>
-</head>
-<body>
+{% extends 'account/base.html' %}
+{% block title %} Восстановление пароля {% endblock%}
+{% block content%}
+{% include 'account/includes/header_registration_block.html' %}
+
 <h1>Восстановление пароля</h1>
 <p>Для восстановленияя пароля вам необходимо ввести адрес электронной почты</p>
 <form method="post">
@@ -12,5 +10,4 @@
     {{form.as_p}}
     <input type="submit" value="Отправить код на почту">
 </form>
-</body>
-</html>
+{% endblock %}
