--- a/bookmarks/account/templates/registration/password_reset_confirm.html
+++ b/bookmarks/account/templates/registration/password_reset_confirm.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Reset_confirm</title>
-</head>
-<body>
+{% extends 'account/base.html' %}
+{% block title %} Смена пароля {% endblock%}
+{% block content%}
+{% include 'account/includes/header_registration_block.html' %}
 <form method="post">
     {% csrf_token %}
     {{form.as_p}}
     <input type="submit" value="Принять">
 </form>
-</body>
-</html>
+{% endblock %}
