--- a/bookmarks/account/templates/registration/password_change_form.html
+++ b/bookmarks/account/templates/registration/password_change_form.html
@@ -1,6 +1,7 @@
 {% extends "account/base.html"%}
 {% block title %}Смена пароля{% endblock %}
 {% block content %}
+{% include 'account/includes/header_registration_block.html' with section='dashboard' %}
 <form method="post">
     {% csrf_token %}
     {{form.as_p}}
