--- a/bookmarks/account/templates/account/user_profile.html
+++ b/bookmarks/account/templates/account/user_profile.html
@@ -3,18 +3,20 @@
 {% block content %}
 
 {% include 'account/includes/header_main.html' with section='profile' %}
-{% if status %}
-    <h2>Изменения были успешно сохранены на сайте</h2>
-{% endif %}
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ user_form.as_p }}
-    {{ profile_form.as_p }}
+    {{ profile_form.date_of_birth.label_tag }} {{ profile_form.date_of_birth }}
+    <br>
     <!-- Добавленный код для отображения фотографии -->
     {% if profile_form.instance.photo %}
         <img width="420" height="400" src="{{ profile_form.instance.photo.url }}" alt="Фото пользователя">
     {% endif %}
+    <br>
+    {{ profile_form.photo.label_tag }}
+    <input type="file" name="photo" accept="image/*">
     <p><input type="submit" value="Сохранить изменения"></p>
+
 </form>
 
 <a href="{% url 'password_change' %}">Сменить пароль</a>
