Добавил сообщение при успешном/провальном изменении данных через django.contrib.messages

--- a/bookmarks/account/templates/account/base.html
+++ b/bookmarks/account/templates/account/base.html
@@ -7,6 +7,16 @@
     <link href="{% static 'account/css/main_account.css' %}" rel="stylesheet">
 </head>
 <body>
+{% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li class="{{ message.tags }}">
+            {{ message|safe }}
+            <a href="#" class="close"></a>
+        </li>
+        {% endfor %}
+    </ul>
+{% endif %}
 {% block content %}
 {% endblock %}
 </body>
