--- a/bookmarks/account/templates/account/includes/header_main.html
+++ b/bookmarks/account/templates/account/includes/header_main.html
@@ -1,34 +1,37 @@
-<header>
-    <span> Заметки </span>
-    <nav>
-        <ul class="menu">
-            <div class="categories">
-                <li {% if section == 'dashboard' %} class="selected" {% endif %}>
-                    <a href="{% url 'dashboard' %}"> Моя стена </a>
-                </li>
+{% load static %}
+<head>
+    <link href="{% static 'account/css/header_main.css' %}" rel="stylesheet">
+</head>
 
+<header>
+        <div class="logo">
+            <span>Мой сайт</span>
+        </div>
+        <nav>
+            <ul class="menu">
+                <li {% if section == 'dashboard' %} class="selected" {% endif %}>
+                    <a href="{% url 'dashboard' %}">Моя стена</a>
+                </li>
                 <li {% if section == 'images' %} class="selected" {% endif %}>
                     <a href="#">Картинки</a>
                 </li>
-
                 <li {% if section == 'people' %} class="selected" {% endif %}>
                     <a href="#">Люди</a>
                 </li>
-            </div>
-
+            </ul>
             <div class="auth">
-                {% if request.user.is_authenticated%}
-                <p {% if section == 'profile' %} class='selected' {% endif %}><a href="{% url 'profile' %}">{{ request.user.username|default:'Пользователь'}}</a></p>
-                    <li >
+                {% if request.user.is_authenticated %}
+                    <p {% if section == 'profile' %} class='selected' {% endif %}>
+                        <a href="{% url 'profile' %}">{{ request.user.username|default:'Пользователь'}}</a>
+                    </p>
+                    <li>
                         <a href="{% url 'logout' %}">Выйти</a>
                     </li>
                 {% else %}
-                <li>
-                    <a href="{% url 'login' %}">Войти</a>
-                </li>
+                    <li>
+                        <a href="{% url 'login' %}">Войти</a>
+                    </li>
                 {% endif %}
             </div>
-
-        </ul>
-    </nav>
+        </nav>
 </header>
