Добавил возможность регистрации с использованием аккаунта гугл

--- a/bookmarks/account/templates/account/register.html
+++ b/bookmarks/account/templates/account/register.html
@@ -18,6 +18,7 @@
             <button type="submit">Зарегистрироваться<i class="fa fa-long-arrow-right"></i></button>
         </div>
     </form>
+    <a href="{% url 'social:begin' 'google-oauth2' %}">Sign in with Google</a>
 </div>
 {% endblock %}
 
