Сделал отображение букмарклетов через закладки на сайте

--- a/bookmarks/account/templates/account/dashboard.html
+++ b/bookmarks/account/templates/account/dashboard.html
@@ -5,5 +5,14 @@
 {% include 'account/includes/header_main.html' with section='dashboard' %}
 
 <h1>Дашборд</h1>
+{% with total_images_created=request.user.images_created.count %}
+<p>Welcome to your dashboard.
+    You have bookmarked {{ total_images_created }} image{{ total_images_created|pluralize }}.
+</p>
+<p>Drag the following button to your bookmarks toolbar
+    to bookmark images from other websites →
+    <a href="javascript:{% include 'bookmarklet_launcher.js' %}" class="button">Bookmark it</a>
+</p>
+{% endwith %}
 <p>Добро пожаловать в ваш дашборд</p>
 {% endblock %}
