Добавил тэг script в базовый шаблон

--- a/bookmarks/account/templates/account/base.html
+++ b/bookmarks/account/templates/account/base.html
@@ -9,16 +9,22 @@
 </head>
 <body>
 {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-        <li class="{{ message.tags }}">
-            {{ message|safe }}
-            <a href="#" class="close"></a>
-        </li>
-        {% endfor %}
-    </ul>
+<ul class="messages">
+    {% for message in messages %}
+    <li class="{{ message.tags }}">
+        {{ message|safe }}
+        <a href="#" class="close"></a>
+    </li>
+    {% endfor %}
+</ul>
 {% endif %}
 {% block content %}
 {% endblock %}
+<script>
+    document.addEventListener('DOMContentLoaded', (event) => {
+         // DOM загружена
+         {% block domready %}
+         {% endblock %} })
+</script>
 </body>
 </html>
