--- a/bookmarks/images/templates/images/image/image_detail.html
+++ b/bookmarks/images/templates/images/image/image_detail.html
@@ -1,7 +1,7 @@
 {% extends "account/base.html" %}
-{% include 'account/includes/header_main.html' with section='images' %}
 {% block title %}{{ image.title }}{% endblock %}
 {% block content %}
+{% include 'account/includes/header_main.html' with section='images' %}
 <h1>{{ image.title }}</h1>
 
 {% load thumbnail %}
@@ -10,12 +10,22 @@
 </a>
 
 
-{% with total_likes=image.user_like.count %}
+{% with total_likes=image.user_like.count  users_like=image.user_like.all %}
 <div class="image-info">
     <div>
  <span class="count">
+     <span class="total">
+         {{ total_likes }}
+     </span>
  {{ total_likes }} like{{ total_likes|pluralize }}
  </span>
+        <a href="#" data-id="{{ image.id }}" data-action="{% if request.user in users_like %}un{% endif %}like"
+           class="like button">
+            {% if request.user not in users_like %}
+            Like
+            {% else %}
+            Unlike
+            {% endif %} </a>
     </div>
     {{ image.description|linebreaks }}
 </div>
@@ -32,4 +42,40 @@
     {% endfor %}
 </div>
 {% endwith %}
+{% endblock %}
+
+{% block domready %}
+const url = '{% url "images:like" %}';
+var options = {
+method: 'POST',
+headers: {'X-CSRFToken': csrftoken},
+mode: 'same-origin'
+}
+document.querySelector('a.like')
+.addEventListener('click', function(e){
+e.preventDefault();
+var likeButton = this;
+// добавить тело запроса
+var formData = new FormData();
+formData.append('id', likeButton.dataset.id);
+formData.append('action', likeButton.dataset.action);
+options['body'] = formData;
+// отправить HTTP-запрос
+fetch(url, options)
+.then(response => response.json())
+.then(data => {
+if (data['status'] === 'ok')
+{
+var previousAction = likeButton.dataset.action;
+// переключить текст кнопки и атрибут data-action
+var action = previousAction === 'like' ? 'unlike' : 'like';
+likeButton.dataset.action = action;
+likeButton.innerHTML = action;
+// обновить количество лайков
+var likeCount = document.querySelector('span.count .total');
+var totalLikes = parseInt(likeCount.innerHTML);
+likeCount.innerHTML = previousAction === 'like' ? totalLikes + 1 : totalLikes - 1;
+}
+})
+});
 {% endblock %}
